[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/LevelEditor.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Cell.tscn" type="PackedScene" id=2]
[ext_resource path="res://Art/Cell.png" type="Texture" id=3]
[ext_resource path="res://Art/Angle.png" type="Texture" id=4]
[ext_resource path="res://Art/Mirror.png" type="Texture" id=5]
[ext_resource path="res://Art/Telleport.png" type="Texture" id=6]
[ext_resource path="res://Art/ColorSwitch.png" type="Texture" id=7]

[sub_resource type="Curve" id=1]

min_value = 0.0
max_value = 1.0
bake_resolution = 100
_data = [ Vector2( 0.0125386, 0.822266 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=2]

width = 64
curve = SubResource( 1 )

[node name="LevelEditor" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1025.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}
cell = ExtResource( 2 )

[node name="Position2D" type="Position2D" parent="."]

position = Vector2( 200, 30 )

[node name="GridContainer" type="GridContainer" parent="."]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -495.5
margin_top = -569.0
margin_right = -375.5
margin_bottom = -28.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/vseparation = 30
columns = 1
__meta__ = {
"_edit_group_": true
}

[node name="ColorsButtons" type="GridContainer" parent="GridContainer"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 120.0
margin_bottom = 90.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Cell Color"
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 1
custom_constants/vseparation = 15
columns = 1
__meta__ = {
"_edit_group_": true
}

[node name="White" type="Button" parent="GridContainer/ColorsButtons"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 120.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "White"
flat = false

[node name="Red" type="Button" parent="GridContainer/ColorsButtons"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 35.0
margin_right = 120.0
margin_bottom = 55.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Red"
flat = false

[node name="Blue" type="Button" parent="GridContainer/ColorsButtons"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 70.0
margin_right = 120.0
margin_bottom = 90.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_constants/hseparation = 0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Blue"
flat = false

[node name="CellModifierButtons" type="GridContainer" parent="GridContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 120.0
margin_right = 120.0
margin_bottom = 388.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Cell type"
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/hseparation = 10
columns = 1
__meta__ = {
"_edit_group_": true
}

[node name="Cell" type="TextureButton" parent="GridContainer/CellModifierButtons"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 64.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 3 )

[node name="Angled" type="TextureButton" parent="GridContainer/CellModifierButtons"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 68.0
margin_right = 64.0
margin_bottom = 132.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )

[node name="Mirror" type="TextureButton" parent="GridContainer/CellModifierButtons"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 136.0
margin_right = 64.0
margin_bottom = 200.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )

[node name="Telleport" type="TextureButton" parent="GridContainer/CellModifierButtons"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 204.0
margin_right = 64.0
margin_bottom = 268.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 6 )

[node name="ColorSwitch" type="TextureButton" parent="GridContainer/CellModifierButtons"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 204.0
margin_right = 64.0
margin_bottom = 268.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 7 )

[node name="Save" type="GridContainer" parent="GridContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 418.0
margin_right = 120.0
margin_bottom = 472.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Enter level name and save"
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/vseparation = 10
custom_constants/hseparation = 0
columns = 1

[node name="LevelName" type="LineEdit" parent="GridContainer/Save"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 70.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
text = "Level_XX"
expand_to_text_length = true
focus_mode = 2
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
context_menu_enabled = true

[node name="SaveButton" type="Button" parent="GridContainer/Save"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 34.0
margin_right = 70.0
margin_bottom = 54.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/hseparation = 0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Save"
flat = false

[node name="Highlight" type="Sprite" parent="."]

modulate = Color( 0.886719, 0.585373, 0.585373, 0.83 )
position = Vector2( 193.303, 47.1625 )
scale = Vector2( 1, 64 )
texture = SubResource( 2 )

[node name="PopupMenu" type="PopupMenu" parent="."]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 20.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false
items = [  ]
hide_on_checkable_item_selection = false

[connection signal="pressed" from="GridContainer/Save/SaveButton" to="." method="_on_SaveButton_pressed"]

[connection signal="id_pressed" from="PopupMenu" to="." method="_on_PopupMenu_id_pressed"]


